--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -33,23 +33,13 @@ import Container from "./Container.astro";
                     <div class="text-gray-600 dark:text-gray-300 lg:pr-4 lg:w-auto w-full lg:pt-0">
                         <ul class="tracking-wide font-medium lg:text-sm flex-col flex lg:flex-row gap-6 lg:gap-0">
                             <li>
-                                <a href="#features" class="block md:px-4 transition hover:text-primary">
+                                <a href="#different" class="block md:px-4 transition hover:text-primary">
                                     <span>Features</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#solution" class="block md:px-4 transition hover:text-primary">
+                                <a href="#whatwedo" class="block md:px-4 transition hover:text-primary">
                                     <span>Solution</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#testimonials" class="block md:px-4 transition hover:text-primary">
-                                    <span>Testimonials</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#blog" class="block md:px-4 transition hover:text-primary">
-                                    <span>Blog</span>
                                 </a>
                             </li>
                         </ul>
