--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,15 +6,15 @@ import Layout from '../layouts/Layout.astro';
 import Testimonials from '../components/Testimonials.astro';
 import CallToAction from '../components/CallToAction.astro';
 import Blog from '../components/Blog.astro';
+import WhatWeDo from '../components/WhatWeDo.astro';
 ---
 
 <Layout title="Welcome to Astrolus.">
 	<main class="space-y-40 mb-40">
 		<HeroSection/>
-		<Features/>
 		<Stats/>
-		<Testimonials/>
+		<WhatWeDo />
+		<Features/>
 		<CallToAction/>
-		<Blog/>
 	</main>
 </Layout>
