--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -16,8 +16,9 @@ import Container from "./Container.astro"
                 <h1 class="text-gray-900 dark:text-white font-bold text-5xl md:text-6xl xl:text-5xl leading-10">Your Path to Sustainable, Timely Care for Timeless Health</h1>
                 <div class="mt-16 flex flex-wrap justify-center gap-y-4 gap-x-6">
                     <a
-                      href="#"
-                      class="relative flex h-11 w-full items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
+                    href="https://diabeater-patient-frontend.vercel.app/"
+                    target="_blank"
+                      class="relative flex h-14 w-full items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
                     >
                       <span class="relative text-base font-semibold text-white"
                         >Get started</span
@@ -25,7 +26,7 @@ import Container from "./Container.astro"
                     </a>
                     <a
                       href="#solution"
-                      class="relative flex h-11 w-full items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:border before:border-transparent before:bg-primary/10 before:bg-gradient-to-b before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 dark:before:border-gray-700 dark:before:bg-gray-800 sm:w-max"
+                      class="relative flex h-14 w-full items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:border before:border-transparent before:bg-primary/10 before:bg-gradient-to-b before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 dark:before:border-gray-700 dark:before:bg-gray-800 sm:w-max"
                     >
                       <span
                         class="relative text-base font-semibold text-primary dark:text-white"
