--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -79,7 +79,7 @@ import Logo from "../../public/images/logo.png";
 
           <div class="mt-12 lg:mt-0">
             <a
-              href="https://diabeater-patient-frontend.vercel.app/"
+              href="https://diabeatit.netlify.app/"
               target="_blank"
               class="relative flex h-9 w-full items-center justify-center px-4 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
             >
