--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -23,7 +23,7 @@ import Container from "./Container.astro";
         What makes us different
         <!-- A technology-first approach to chronic disease management -->
       </h2>
-      <p class="text-gray-600 dark:text-gray-300 text-lg">
+      <p class="text-gray-600 dark:text-gray-300 text-lg mt-8 w-2/3">
         We use technology to address chronic disease management, allowing for
         continuous real-time health monitoring, data analysis for pattern
         detection, trend prediction, and the provision of immediate,
