--- a/src/components/WhatWeDo.astro
+++ b/src/components/WhatWeDo.astro
@@ -1,6 +1,8 @@
 ---
 import Container from "./Container.astro";
 import HomePage from "../../public/images/clients/homepage.png";
+import DoctorHome from "../../public/images/clients/doctor-home.png";
+import DoctorStat from "../../public/images/clients/doctor-stat.png";
 ---
 
 <div id="whatwedo">
@@ -17,7 +19,7 @@ import HomePage from "../../public/images/clients/homepage.png";
           d="M9 4.5a.75.75 0 01.721.544l.813 2.846a3.75 3.75 0 002.576 2.576l2.846.813a.75.75 0 010 1.442l-2.846.813a3.75 3.75 0 00-2.576 2.576l-.813 2.846a.75.75 0 01-1.442 0l-.813-2.846a3.75 3.75 0 00-2.576-2.576l-2.846-.813a.75.75 0 010-1.442l2.846-.813A3.75 3.75 0 007.466 7.89l.813-2.846A.75.75 0 019 4.5zM18 1.5a.75.75 0 01.728.568l.258 1.036c.236.94.97 1.674 1.91 1.91l1.036.258a.75.75 0 010 1.456l-1.036.258c-.94.236-1.674.97-1.91 1.91l-.258 1.036a.75.75 0 01-1.456 0l-.258-1.036a2.625 2.625 0 00-1.91-1.91l-1.036-.258a.75.75 0 010-1.456l1.036-.258a2.625 2.625 0 001.91-1.91l.258-1.036A.75.75 0 0118 1.5zM16.5 15a.75.75 0 01.712.513l.394 1.183c.15.447.5.799.948.948l1.183.395a.75.75 0 010 1.422l-1.183.395c-.447.15-.799.5-.948.948l-.395 1.183a.75.75 0 01-1.422 0l-.395-1.183a1.5 1.5 0 00-.948-.948l-1.183-.395a.75.75 0 010-1.422l1.183-.395c.447-.15.799-.5.948-.948l.395-1.183A.75.75 0 0116.5 15z"
           clip-rule="evenodd"></path>
       </svg>
-      <section class="flex justify-between w-full ">
+      <section class="flex justify-between w-full items-center">
         <div class="w-1/2 mr-10">
           <h2
             class="my-5 text-2xl font-bold text-gray-700 dark:text-white md:text-6xl"
@@ -31,8 +33,14 @@ import HomePage from "../../public/images/clients/homepage.png";
             data, and receive alerts for abnormal metrics, improving chronic
             disease management for both patients and physicians.
           </p>
+
         </div>
-        <img class="w-1/2 rounded-md" src={HomePage} alt="Home page" />
+        <img class="w-1/2 rounded-md resize-none" src={HomePage} alt="Home page" />
+      </section>
+
+      <section class="mt-5">
+        <img class="w-1/2 rounded-md" src={DoctorHome} alt="Home page" />
+        <img class="w-1/2 rounded-md mt-5 justify-start float-right" src={DoctorStat} alt="Home page" />
       </section>
     </div>
   </Container>
